k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carsi-staging
  labels:
    app.kubernetes.io/part-of: carsi-lms
    environment: staging
